<resources>
    <string name="app_name">Pdf Sample</string>
    <string name="top_one_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="sec_txt">me as a collector</string>
    <string name="reg_txt">register</string>
    <string name="service_head_txt">lorem ipsum is used</string>
    <string name="service_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="about_txt">About Us.</string>
    <string name="team_txt">Team.</string>
    <string name="reach_txt">Reach us.</string>
    <string name="affiliattion_txt">Affiliattions.</string>
    <string name="disclaimers_txt">Disclaimers.</string>
    <string name="privacy_txt">Privacy Policy.</string>
    <string name="copy_right_txt">Content Copyright reserved.</string>
    <string name="upload_txt">Upload</string>
    <string name="edit_txt">Edit</string>
    <string name="name_txt">john.doe</string>
    <string name="dashboard_txt">My Dashboard</string>
    <string name="artworks">Artworks</string>
    <string name="followers">Followers</string>
    <string name="_50">50</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="_21">21</string>
    <string name="_120">120</string>
    <string name="_43k">43K</string>
    <string name="_2_3k">2.3K</string>
    <string name="pallette">pallette</string>
    <string name="revenue">Revenue</string>
</resources>