<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375pt"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">
    <ScrollView
        android:layout_width="375pt"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="375pt"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="211pt"
                android:layout_height="77pt"
                android:layout_marginStart="24pt"
                android:layout_marginLeft="24pt"
                android:layout_marginTop="31pt"
                android:layout_marginRight="140pt"
                android:layout_marginEnd="140pt"
                android:src="@drawable/ic_head_mock" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7pt"
                android:src="@drawable/ic_group_mock"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/head_txt"
                android:layout_width="289pt"
                android:layout_height="79pt"
                android:textSize="15pt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/bebas_neue_font_family"
                android:text="@string/top_one_txt"
                android:layout_marginRight="50pt"
                android:layout_marginEnd="50pt"
                android:layout_marginLeft="16pt"
                android:layout_marginStart="16pt"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:id="@+id/nav_click"
                    android:layout_width="123pt"
                    android:layout_height="43pt"
                    android:layout_marginTop="7pt"
                    android:layout_marginLeft="18pt"
                    android:layout_marginStart="18pt"
                    android:text=""
                    android:background="@drawable/round_btn_bg">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="18pt"
                        android:layout_height="16pt"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5pt"
                        android:src="@drawable/ic_go_mock"
                        android:layout_marginStart="5pt" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="38pt"
                        android:layout_marginTop="7pt"
                        android:layout_marginRight="38pt"
                        android:textSize="22pt"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bebas_neue_font_family"
                        android:text="@string/reg_txt"
                        android:layout_marginLeft="5pt"
                        android:layout_marginStart="5pt"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="38pt" />
                </RelativeLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="38pt"
                    android:layout_marginTop="7pt"
                    android:layout_marginRight="38pt"
                    android:textSize="22pt"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bebas_neue_font_bold_family"
                    android:text="@string/sec_txt"
                    android:layout_gravity="center"
                    android:layout_marginEnd="38pt" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36pt"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="12pt"
                    android:layout_height="11pt"
                    android:src="@drawable/ic_track_mock"
                    android:layout_marginLeft="103pt"
                    android:layout_marginStart="103pt"
                    android:layout_gravity="center"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="28pt"
                    android:textSize="18pt"
                    android:textColor="#577bdf"
                    android:fontFamily="@font/bebas_neue_font_family"
                    android:text="track my application"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15pt"
                    android:layout_marginStart="15pt" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/serviceView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48pt"
                android:orientation="vertical"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/face_book"
                    android:layout_width="32pt"
                    android:layout_height="32pt"
                    android:layout_marginLeft="132pt"
                    android:src="@drawable/face_book_icon"
                    android:layout_marginStart="132pt" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32pt"
                    android:layout_height="32pt"
                    android:layout_toRightOf="@+id/face_book"
                    android:layout_marginLeft="10pt"
                    android:layout_toEndOf="@+id/face_book"
                    android:src="@drawable/insta_icon"
                    android:layout_marginStart="10pt" />
            </RelativeLayout>
            <View
                android:layout_width="260pt"
                android:layout_height="2dp"
                android:layout_marginTop="21pt"
                android:layout_marginLeft="21pt"
                android:layout_marginStart="21pt"
                android:layout_marginRight="51pt"
                android:layout_marginEnd="51pt"
                android:background="@color/border_wht"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="254pt"
                android:layout_height="28pt"
                android:layout_marginTop="23pt"
                android:layout_marginLeft="30pt"
                android:layout_marginStart="30pt"
                android:layout_marginRight="120pt"
                android:layout_marginEnd="120pt"
                android:src="@drawable/ic_bottom_mock"/>
            <LinearLayout
                android:layout_width="260pt"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="18pt"
                android:layout_marginLeft="47pt"
                android:layout_marginStart="47pt"
                android:layout_marginRight="61pt"
                android:layout_marginEnd="61pt">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/about_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/team_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/reach_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:layout_marginLeft="40pt"
                    android:layout_marginStart="40pt"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/affiliattion_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/disclaimers_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:fontFamily="@font/bebas_neue_font_medium"
                        android:text="@string/privacy_txt"
                        android:textColor="@color/black"
                        android:textSize="16pt"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="260pt"
                android:layout_height="2dp"
                android:layout_marginTop="10pt"
                android:layout_marginLeft="21pt"
                android:layout_marginStart="21pt"
                android:layout_marginRight="31pt"
                android:layout_marginEnd="31pt"
                android:background="@color/border_wht"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24pt"
                android:layout_marginLeft="97pt"
                android:layout_marginStart="97pt"
                android:layout_marginRight="97pt"
                android:layout_marginEnd="97pt"
                android:layout_marginTop="10pt"
                android:layout_marginBottom="48pt"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="23pt"
                    android:layout_height="23pt"
                    android:src="@drawable/ic_copy_right"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="24pt"
                    android:textSize="16pt"
                    android:text="@string/copy_right_txt"
                    android:fontFamily="@font/bebas_neue_font_family"
                    android:layout_marginLeft="5pt"
                    android:layout_marginStart="5pt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>